# aoc2024

./: Cargo.toml  LICENSE  README.md
benches/: bridge_repair_bench.rs  ceres_search_bench.rs  disk_fragmenter_bench.rs  guard_gallivant_bench.rs  historian_hysteria_bench.rs  hoof_it_bench.rs  mull_it_over_bench.rs  print_queue_bench.rs  red_nosed_reports_bench.rs  resonant_collinearity_bench.rs
src/: bridge_repair.rs  ceres_search.rs  disk_fragmenter.rs  guard_gallivant.rs  historian_hysteria.rs  hoof_it.rs  lib.rs  mull_it_over.rs  print_queue.rs  red_nosed_reports.rs  resonant_collinearity.rs
