[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "historian_hysteria_bench"
harness = false

[[bench]]
name = "red_nosed_reports_bench"
harness = false

[[bench]]
name = "mull_it_over_bench"
harness = false

[[bench]]
name = "ceres_search_bench"
harness = false

[[bench]]
name = "print_queue_bench"
harness = false

[[bench]]
name = "guard_gallivant_bench"
harness = false

[[bench]]
name = "bridge_repair_bench"
harness = false
